Done 'Simplifica variáveis', inicia simplifica função

--- a/TP03/gramatica.conf
+++ b/TP03/gramatica.conf
@@ -1,4 +1,4 @@
-S -> FUN VAR BEG $
+S' -> S $
 E -> A
 E -> A opR A
 opR -> <
@@ -7,7 +7,6 @@ opR -> >
 opR -> >=
 opR -> =
 opR -> <>
-opR -> >
 A -> A opB B
 A -> B
 opB -> +
@@ -31,6 +30,7 @@ C -> ID
 C -> NUM
 C -> FLOAT_NUM
 C -> STRING
+S -> FUN VAR BEG
 FUN -> function ID ( L ) : T ;
 VAR -> var K
 VAR -> 
@@ -44,7 +44,7 @@ T -> Boolean
 T -> Double
 L -> P ; L
 L -> P
-BEG -> begin X end ;
+BEG -> begin X end
 X -> Y M
 X -> M
 Y -> Y M ;
