Funcionando para entradas com 'VAR'

--- a/TP03/gramatica.conf
+++ b/TP03/gramatica.conf
@@ -1,4 +1,4 @@
-S' -> S $
+SS -> S $
 E -> A
 E -> A opR A
 opR -> <
@@ -25,26 +25,26 @@ opC -> SHR
 C -> ( E )
 C -> - C
 C -> + C
-C -> not C
+C -> NOT C
 C -> ID
 C -> NUM
 C -> FLOAT_NUM
 C -> STRING
-S -> FUN VAR BEG
-FUN -> function ID ( L ) : T ;
-VAR -> var K
-VAR -> 
+S -> FUN V BEG
+FUN -> FUNCTION ID ( L ) : T ;
+V -> VAR K
+V -> VAZIO
 K -> P ; K
 K -> P ;
 P -> IL : T
 IL -> ID , IL
 IL -> ID
-T -> Longint
-T -> Boolean
-T -> Double
+T -> LONGINT
+T -> BOOLEAN
+T -> DOUBLE
 L -> P ; L
 L -> P
-BEG -> begin X end
+BEG -> BEGIN X END
 X -> Y M
 X -> M
 Y -> Y M ;
