Funcionando, resta classe S e checagem de tipo

--- a/TP03/gramatica.conf
+++ b/TP03/gramatica.conf
@@ -30,10 +30,10 @@ C -> ID
 C -> NUM
 C -> FLOAT_NUM
 C -> STRING
+S -> FUN BEG
 S -> FUN V BEG
 FUN -> FUNCTION ID ( L ) : T ;
 V -> VAR K
-V -> VAZIO
 K -> P ; K
 K -> P ;
 P -> IL : T
